# greetings-lib

./: .coverage  .gitignore  .pre-commit-config.yaml  AGENTS_COLLABORATION.md  AGENTS_ENVIRONMENT.md  AGENTS_LINTING.md  Agents.md  PLANS.md  README.md  assistant.py  pyproject.toml
.github/: AGENTS_COLLABORATION.md  CODEOWNERS  auto_assign.yml
.github/BRANCH/: AGENT_BRANCH.md  branch.md
.github/ISSUE/: feature.md
.github/ISSUE_TEMPLATE/: bug.md  feature.md
.github/PULL_REQUEST/: pull_request.md
.github/PULL_REQUEST_TEMPLATE/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: AGENTS_CI.md  tests.yml
docs/agents/: AGENTS_CODING_GUIDELINES.md  AGENTS_COLLABORATION.md  AGENTS_ENVIRONMENT.md  plan.md
src/greetings_lib/: AGENTS_CODING_GUIDELINES.md  greetings.py
tests/: AGENTS_TESTS.md  AGENT_TESTS.md  test_greetings.py
